3.nginx_routing/1.loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: eunji
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: eunji
spec:
  type: LoadBalancer
  ports:
  - name: http 
    port: 80
    targetPort: 80
  selector:
    app: my-nginx
