3.nginx_routing/2.ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: eunji
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: eunji
spec:
# ingress 를 적용하기 위해 클러스터 ip로 변경
  type: ClusterIP
  ports:
  - name: http 
    port: 80
    targetPort: 80
  selector:
    app: my-nginx
---
# ingress-controller 설치는 별도 필요
# ingress controller도 nginx 기반으로 구성되어있음
#  ingress controller 설치시에 alb 설치되고 ..
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: eunji
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 첫번째 prefix제거 후 endpoint 전달

spec:
  rules:
  - host: server.qkdrmawll.store
    http: 
      paths:
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /order-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
